<resources>
    <string name="app_name">TravelMeDrivers</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Open Travels</string>
    <string name="menu_gallery">My Travels</string>
    <string name="menu_slideshow">History Travels</string>
    <string name="sourceAddress">Source</string>
    <string name="destinationAddress">Destination</string>
    <string name="date">Date</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="departureDate">Date</string>
    <string name="passenger">Passenger</string>
    <string name="send_offer">Send offer</string>
    <string name="new_travel">New travel</string>
    <string name="application_title">Travel Me Drivers</string>
    <string name="departure_date">Departure Date</string>
    <string name="return_date">Return Date</string>
    <string name="from_date">From</string>
    <string name="until_date">Until</string>
    <string name="pay_button">Pay</string>
    <string name="filter_button">Filter</string>
    <string name="paid_only">Paid only</string>
    <string name="enter_km">Enter km</string>
    <string name="enter_location">Enter location</string>
    <string name="offer_sent">Offer Sent</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="status">Status</string>
    <string name="clean_filter">Clean FILTER</string>
    <string name="watch_in_map">watch in Map</string>
    <string name="dates">Dates</string>
    <string name="client_name">Client Name</string>
</resources>