<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.project.travelmedrivers.ui.openTravels.OpenTravelsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_open_travels" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.project.travelmedrivers.ui.runningTravels.RunningTravelsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_registeredTravels" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.project.travelmedrivers.ui.historyTravels.HistoryTravelsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_history_travels" />
</navigation>